# snatch

./: .gitignore  README.md  index.html  lefthook.yml  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  pages.yml  release.yml
src/: App.tsx  globals.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: dialog.rs  download.rs  history.rs  mod.rs  settings.rs  system.rs  window.rs
src-tauri/src/models/: download.rs  history.rs  mod.rs  playlist_info.rs  quality.rs  settings.rs  video_info.rs
src-tauri/src/services/: audit.rs  binary_downloader.rs  clipboard.rs  history.rs  mod.rs  settings.rs
src-tauri/src/services/ytdlp/: binary.rs  formats.rs  info.rs  mod.rs  progress.rs  runner.rs
src-tauri/src/validators/: flags.rs  mod.rs  path.rs  url.rs
src/components/effects/: CRTOverlay.tsx  MatrixRain.tsx
src/components/features/: BatchQueue.tsx  DependencyBanner.tsx  DownloadButton.tsx  FolderPicker.tsx  HistoryContextMenu.tsx  HistoryTable.tsx  PlaylistView.tsx  QualityPicker.tsx  SettingsPanel.tsx  UpdateBanner.tsx  UrlInput.tsx  VideoPlayer.tsx  VideoPreview.tsx
src/components/layout/: MainLayout.tsx  StatusBar.tsx  TabNav.tsx  TitleBar.tsx
src/components/shared/: ErrorBoundary.tsx  HackerButton.tsx  HackerCard.tsx  HackerInput.tsx  HackerSelect.tsx  HackerToggle.tsx  RetroProgress.tsx  TermLog.tsx  VideoStatusBadge.tsx
src/components/ui/: select.tsx
src/hooks/: useClipboard.ts  useDownload.ts  useHistory.ts  useI18n.ts  useQueue.ts  useSettings.ts  useTermLog.ts  useUpdater.ts  useVideoStatus.ts
src/i18n/: en.json  index.ts  ru.json
src/i18n/__tests__/: i18n.test.ts
src/lib/: bindings.ts  constants.ts  notifications.ts  speed-cache.ts  types.ts
src/lib/__tests__/: constants.test.ts
src/pages/: AboutPage.tsx  DownloadPage.tsx  HistoryPage.tsx  QueuePage.tsx  SettingsPage.tsx
src/stores/: app-store.ts
website/: index.html  script.js  style.css
