[package]
name = "snatch"
version = "1.0.0"
description = "YouTube downloader with retro hacker aesthetic"
authors = ["SNATCH"]
license = "MIT"
edition = "2021"
rust-version = "1.80"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "sync", "io-util"] }
regex = "1"
dirs = "6"
tokio-util = "0.7"
uuid = { version = "1", features = ["v4"] }
arboard = "3"
opener = { version = "0.7", features = ["reveal"] }
sha2 = "0.10"
tauri-plugin-dialog = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
zip = "2"
xz2 = "0.1"
tar = "0.4"
url = "2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
